<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/frameLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragments.AddContactFragment">
	
	<EditText
		android:id="@+id/name_input"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="104dp"
		android:ems="10"
		android:hint="@string/name_hint"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<EditText
		android:id="@+id/email_input"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="56dp"
		android:ems="10"
		android:hint="@string/email_hint"
		android:inputType="textEmailAddress"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/name_input"
		tools:text="@string/email_hint" />
	
	<EditText
		android:id="@+id/phone_input"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="56dp"
		android:ems="10"
		android:hint="@string/contact_sample_phone"
		android:inputType="phone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_input" />
	
	<Button
		android:id="@+id/add_contact_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/add_button_text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/phone_input" />

</androidx.constraintlayout.widget.ConstraintLayout>