<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/mainBackground"
	tools:context=".LoginActivity">
	
	<EditText
		android:id="@+id/email"
		style="@android:style/Widget.Material.EditText"
		android:layout_width="300dp"
		android:layout_height="43dp"
		android:layout_marginTop="92dp"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/email_hint"
		android:inputType="textEmailAddress"
		android:textAllCaps="false"
		android:textColorLink="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.495"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/logo"
		tools:targetApi="o" />
	
	<EditText
		android:id="@+id/password"
		style="@android:style/Widget.Material.EditText"
		android:layout_width="300dp"
		android:layout_height="50dp"
		android:layout_marginTop="20dp"
		android:autofillHints=""
		android:ems="10"
		android:hint="@string/password_hint"
		android:inputType="textPassword"
		app:layout_constraintStart_toStartOf="@+id/email"
		app:layout_constraintTop_toBottomOf="@+id/email"
		tools:targetApi="o" />
	
	<Button
		android:id="@+id/login"
		style="@android:style/Widget.Material.Button.Borderless"
		android:layout_width="168dp"
		android:layout_height="55dp"
		android:layout_marginTop="48dp"
		android:background="@color/colorPrimaryDark"
		android:onClick="login"
		android:text="@string/login_button_text"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		app:layout_constraintEnd_toEndOf="@+id/password"
		app:layout_constraintHorizontal_bias="0.409"
		app:layout_constraintStart_toStartOf="@+id/password"
		app:layout_constraintTop_toBottomOf="@+id/rememberMe" />
	
	<ImageView
		android:id="@+id/logo"
		android:layout_width="203dp"
		android:layout_height="186dp"
		android:contentDescription="@string/logo_accessible_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@mipmap/logo" />
	
	<Switch
		android:id="@+id/rememberMe"
		android:layout_width="283dp"
		android:layout_height="37dp"
		android:layout_marginTop="8dp"
		android:text="@string/remember_me"
		android:textColor="@android:color/tertiary_text_dark"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="@+id/password"
		app:layout_constraintHorizontal_bias="0.529"
		app:layout_constraintStart_toStartOf="@+id/password"
		app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>