<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragments.ContactDetailFragment">
	
	<TextView
		android:id="@+id/contact_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:text="@string/contact_sample_name"
		android:textSize="26sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.502"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/contact_image" />
	
	<TextView
		android:id="@+id/contact_phone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="56dp"
		android:text="@string/contact_sample_phone"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="@+id/contact_name"
		app:layout_constraintStart_toStartOf="@+id/contact_name"
		app:layout_constraintTop_toBottomOf="@+id/contact_name" />
	
	<TextView
		android:id="@+id/contact_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="28dp"
		android:text="@string/contact_sample_email"
		app:layout_constraintEnd_toEndOf="@+id/contact_name"
		app:layout_constraintStart_toStartOf="@+id/contact_name"
		app:layout_constraintTop_toBottomOf="@+id/contact_phone" />
	
	<Button
		android:id="@+id/delete_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="28dp"
		android:text="@string/delete_contact_button"
		app:layout_constraintEnd_toEndOf="@+id/contact_phone"
		app:layout_constraintStart_toStartOf="@+id/contact_phone"
		app:layout_constraintTop_toBottomOf="@+id/contact_email" />
	
	<ImageView
		android:id="@+id/contact_image"
		android:layout_width="411dp"
		android:layout_height="284dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:src="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>